--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,12 @@
 <footer class="footer">
   <small>
-    The <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-    by <a href="http://www.michaelhartl.com/">Michael Hartl</a>
+    <a href="https://github.com/NaokiIshimura/">Naoki Ishimura</a>
   </small>
   <nav>
     <ul>
-      <li><%= link_to "About",   '#' %></li>
-      <li><%= link_to "Contact", '#' %></li>
-      <li><a href="http://news.railstutorial.org/">News</a></li>
+      <li><a href="https://github.com/NaokiIshimura/">Github</a></li>
+      <li><a href="https://www.linkedin.com/in/naoki-ishimura/">LinkedIn</a></li>
+      <li><a href="http://qiita.com/NaokiIshimura/">Qiita</a></li>
     </ul>
   </nav>
 </footer>
