--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,8 +4,21 @@
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home",    root_path %></li>
+        <li><%= link_to "About",   about_path %></li>
         <li><%= link_to "Help",    help_path %></li>
-        <li><%= link_to "Log in", '#' %></li>
+
+        <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Menu1</a></li>
+          <li><a href="#">Menu2</a></li>
+          <li role="separator" class="divider"></li>
+          <li class="dropdown-header">header</li>
+          <li><a href="#">Menu3</a></li>
+          <li><a href="#">Menu4</a></li>
+        </ul>
+        </li><!-- dropdown -->
+
       </ul>
     </nav>
   </div>
