--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= full_title(yield(:title)) %></title>
-    <%= render 'layouts/rails_default' %>
-    <%= render 'layouts/shim' %>
-  </head>
-  <body>
-    <%= render 'layouts/header' %>
+<head>
+  <title><%= full_title(yield(:title)) %></title>
+  <%= render 'layouts/rails_default' %>
+  <%= render 'layouts/shim' %>
+</head>
+<body>
+<%= render 'layouts/header' %>
+<% if request.path_info == root_path %>
+    <%= yield %>
+<% else %>
     <div class="container">
       <%= yield %>
-      <%= render 'layouts/footer' %>
     </div>
-  </body>
+<% end %>
+<div class="container">
+  <%= render 'layouts/footer' %>
+</div>
+</body>
 </html>
