--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,16 +1,57 @@
 <% provide(:title, 'Home') %>
 
-<div class="center jumbotron">
-  <h1>Welcome to the Sample App</h1>
+<style type="text/css">
 
-  <h2>
-    This is the home page for the
-    <a href="http://railstutorial.jp/">Ruby on Rails Tutorial</a>
-    sample application.
-  </h2>
+  div.jumbotron {
+    height: 400px;
+    background: url(<%= asset_path "top.jpg" %>) no-repeat;
+    background-position: 50% 50%;
+    background-size: cover;
+  }
 
-  <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+</style>
+
+<div class="jumbotron">
+  <div class="container title">
+    <h1 class="title">Sample App</h1>
+
+    <h2 class="title">
+        This is a sample application.
+    </h2>
+
+    <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary title" %>
+  </div>
 </div>
 
-<%= link_to image_tag("rails.png", alt: "Rails logo"),
-            'http://rubyonrails.org/' %>
+
+<div class="container sub-title">
+
+  <div class="row" style="display:flex;">
+
+    <div class="col-md-4" style="flex:1;">
+      <h2 class="sub-title">Heading</h2>
+      <p class="sub-title">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus
+        commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
+        magna mollis euismod. Donec sed odio dui. </p>
+      <p><a class="btn btn-secondary sub-title" href="#" role="button">View details &raquo;</a></p>
+    </div>
+
+    <div class="col-md-4" style="flex:1;">
+      <h2 class="sub-title">Heading</h2>
+      <p class="sub-title">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus
+        commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
+        magna mollis euismod. Donec sed odio dui. </p>
+      <p><a class="btn btn-secondary sub-title" href="#" role="button">View details &raquo;</a></p>
+    </div>
+
+    <div class="col-md-4" style="flex:1;">
+      <h2 class="sub-title">Heading</h2>
+      <p class="sub-title">Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam.
+        Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris
+        condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+      <p><a class="btn btn-secondary sub-title" href="#" role="button">View details &raquo;</a></p>
+    </div>
+
+  </div><!-- row -->
+
+</div>
