--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,14 +8,14 @@
         <li><%= link_to "Help",    help_path %></li>
 
         <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Others<span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="#">Menu1</a></li>
-          <li><a href="#">Menu2</a></li>
+          <li><%= link_to 'Form', form_input_path %></li>
+          <li><a href="#">Menu</a></li>
           <li role="separator" class="divider"></li>
           <li class="dropdown-header">header</li>
-          <li><a href="#">Menu3</a></li>
-          <li><a href="#">Menu4</a></li>
+          <li><a href="#">Menu</a></li>
+          <li><a href="#">Menu</a></li>
         </ul>
         </li><!-- dropdown -->
 
