--- a/app/views/form/input.html.erb
+++ b/app/views/form/input.html.erb
@@ -1,10 +1,10 @@
-<% provide(:title, 'Form') %>
+<% provide(:title, 'FormTag') %>
 
 <div class="col-md-8 col-md-offset-2">
 
   <h1>
     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-    Form#input
+    FormTag#input
   </h1>
   <p>Find me in app/views/form/input.html.erb</p>
 
