--- a/app/views/form/output.html.erb
+++ b/app/views/form/output.html.erb
@@ -1,10 +1,10 @@
-<% provide(:title, 'Form Output') %>
+<% provide(:title, 'FormTag Output') %>
 
 <div class="col-md-8 col-md-offset-2">
 
   <h1>
     <span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
-    Form#output
+    FormTag#output
   </h1>
   <p>Find me in app/views/form/output.html.erb</p>
 
