--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,8 +10,8 @@
         <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Others<span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><%= link_to 'Form', form_input_path %></li>
-          <li><a href="#">Menu</a></li>
+          <li><%= link_to 'FormTag', form_input_path %></li>
+          <li><%= link_to 'FormObject', form_object_input_path %></li>
           <li role="separator" class="divider"></li>
           <li class="dropdown-header">header</li>
           <li><a href="#">Menu</a></li>
