Add-font-awesome

--- a/app/views/form/output.html.erb
+++ b/app/views/form/output.html.erb
@@ -3,10 +3,11 @@
 <div class="col-md-8 col-md-offset-2">
 
   <h1>
-    <span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
-    FormTag#output
+    <%= fa_icon 'edit', text: 'FromTag', right: false %>
+    - Output -
   </h1>
-  <p>Find me in app/views/form/output.html.erb</p>
+
+  <hr>
 
   <table class="table table-striped">
     <tr>
