--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -26,6 +26,7 @@ div.title {
 
 h1.title {
   color: white;
+  font-size: 3em;
   text-align: left;
   text-shadow: 0 0 10px #000;
   margin-bottom: 0px;
@@ -137,7 +138,7 @@ p {
   margin-right: 10px;
   font-size: 1.7em;
   color: #fff;
-  text-transform: uppercase;
+  /*text-transform: uppercase;*/
   letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
