--- a/app/views/form/input.html.erb
+++ b/app/views/form/input.html.erb
@@ -3,10 +3,9 @@
 <div class="col-md-8 col-md-offset-2">
 
   <h1>
-    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-    FormTag#input
+    <%= fa_icon 'edit', text: 'FromTag', right: false %>
+    - Input -
   </h1>
-  <p>Find me in app/views/form/input.html.erb</p>
 
   <hr>
 
@@ -69,7 +68,9 @@
         <div class="col-sm-2">
         </div>
         <div class="col-sm-10">
-          <%= submit_tag("Submit", class: "btn btn-primary") %>
+          <%= button_tag class: "btn btn-primary" do %>
+            <%= fa_icon 'edit', text: 'Submit', right: false %>
+          <% end %>
         </div>
       </div>
 
@@ -100,7 +101,7 @@
         $("#text_area").prop('disabled', true);
         $("#check_box").prop('disabled', true);
         $("input[name=radio_button]").prop('disabled', true);
-        $("input[type=submit]").prop('disabled', true);
+        $("button[type=submit]").prop('disabled', true);
         console.log('test');
     }
     // フォームを操作出来るようにする
@@ -109,6 +110,6 @@
         $("#text_area").prop('disabled', false);
         $("#check_box").prop('disabled', false);
         $("input[name=radio_button]").prop('disabled', false);
-        $("input[type=submit]").prop('disabled', false);
+        $("button[type=submit]").prop('disabled', false);
     }
 </script>
