--- a/app/views/form_object/input.html.erb
+++ b/app/views/form_object/input.html.erb
@@ -3,10 +3,9 @@
 <div class="col-md-8 col-md-offset-2">
 
   <h1>
-    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-    FormObject#input
+    <%= fa_icon 'edit', text: 'FromObject', right: false %>
+    - Input -
   </h1>
-  <p>Find me in app/views/form_object/input.html.erb</p>
 
   <hr>
 
@@ -33,7 +32,7 @@
           <%= f.label :text_field, "TextBox", {class: "form-label"} %>
         </div>
         <div class="col-sm-10">
-          <%= f.text_field :text_field, {value:'デフォルト値', class: "form-control"} %>
+          <%= f.text_field :text_field, {value: 'デフォルト値', class: "form-control"} %>
         </div>
       </div>
 
@@ -42,7 +41,7 @@
           <%= f.label :text_area, "TextArea", {class: "form-label"} %>
         </div>
         <div class="col-sm-10">
-          <%= f.text_area :text_area, {value:'デフォルト値', :rows => @rows, class: "form-control"} %>
+          <%= f.text_area :text_area, {value: 'デフォルト値', :rows => @rows, class: "form-control"} %>
         </div>
       </div>
 
@@ -70,7 +69,9 @@
         <div class="col-sm-2">
         </div>
         <div class="col-sm-10">
-          <%= f.submit "Submit", {class: "btn btn-primary"} %>
+          <%= button_tag class: "btn btn-primary" do %>
+            <%= fa_icon 'edit', text: 'Submit', right: false %>
+          <% end %>
         </div>
       </div>
 
