--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,22 +1,26 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "sample app", root_path, id: "logo" %>
+
+    <%= link_to root_path, id: "logo" do %>
+        <%= fa_icon 'diamond', text: 'Sample App', right: false %>
+    <% end %>
+
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home",    root_path %></li>
-        <li><%= link_to "About",   about_path %></li>
-        <li><%= link_to "Help",    help_path %></li>
+        <li><%= link_to "Home", root_path %></li>
+        <li><%= link_to "About", about_path %></li>
+        <li><%= link_to "Help", help_path %></li>
 
         <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Others<span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><%= link_to 'FormTag', form_input_path %></li>
-          <li><%= link_to 'FormObject', form_object_input_path %></li>
-          <li role="separator" class="divider"></li>
-          <li class="dropdown-header">header</li>
-          <li><a href="#">Menu</a></li>
-          <li><a href="#">Menu</a></li>
-        </ul>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Others<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to 'FormTag', form_input_path %></li>
+            <li><%= link_to 'FormObject', form_object_input_path %></li>
+            <li role="separator" class="divider"></li>
+            <li class="dropdown-header">header</li>
+            <li><a href="#">Menu</a></li>
+            <li><a href="#">Menu</a></li>
+          </ul>
         </li><!-- dropdown -->
 
       </ul>
