--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -5,6 +5,13 @@
 /* custom */
 /* ------ */
 
+/* form */
+
+.field_with_errors {
+  @extend .has-error;
+  color: red;
+}
+
 /* header */
 
 header.navbar {
