--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,8 +17,9 @@
             <li><%= link_to 'FormTag', form_input_path %></li>
             <li><%= link_to 'FormObject', form_object_input_path %></li>
             <li role="separator" class="divider"></li>
-            <li class="dropdown-header">header</li>
-            <li><a href="#">Menu</a></li>
+            <li class="dropdown-header">Validation</li>
+            <li><%= link_to 'Sample', validation_form_path %></li>
+            <li role="separator" class="divider"></li>
             <li><a href="#">Menu</a></li>
           </ul>
         </li><!-- dropdown -->
