Add download page

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,6 +23,7 @@
 
             <li role="separator" class="divider"></li>
             <li class="dropdown-header">Other</li>
+            <li><%= link_to 'Download', download_index_path %></li>
             <li><%= link_to 'Logger', logger_path %></li>
           </ul>
         </li><!-- dropdown -->
