--- a/app/views/logger/index.html.erb
+++ b/app/views/logger/index.html.erb
@@ -1,10 +1,15 @@
 <% provide(:title, 'Logger') %>
 
-<h1>Logger</h1>
+<div class="col-md-8 col-md-offset-2">
+  <h1>Logger</h1>
 
-<h2><%= link_to 'puts', logger_log_puts_path%></h2>
-<h2><%= link_to 'debug', logger_debug_path%></h2>
-<h2><%= link_to 'info', logger_info_path%></h2>
-<h2><%= link_to 'warn', logger_warn_path%></h2>
-<h2><%= link_to 'error', logger_error_path%></h2>
-<h2><%= link_to 'fatal', logger_fatal_path%></h2>
+  <hr>
+
+  <h2><%= link_to 'puts', logger_log_puts_path %></h2>
+  <h2><%= link_to 'debug', logger_debug_path %></h2>
+  <h2><%= link_to 'info', logger_info_path %></h2>
+  <h2><%= link_to 'warn', logger_warn_path %></h2>
+  <h2><%= link_to 'error', logger_error_path %></h2>
+  <h2><%= link_to 'fatal', logger_fatal_path %></h2>
+  
+</div>
